# Algo_new_start

./: .gitignore  404.html  Readme.md  index.html  main.py  mkdocs.yml  pyproject.toml
.github/workflows/: pylint.yml
Amazon/: items_container.py  wordSearch.py
chapter_data_structure/: index.html
chapter_data_structure/basic_data_types/: index.html
chapter_data_structure/character_encoding/: index.html
chapter_data_structure/classification_of_data_structure/: index.html
chapter_data_structure/number_encoding/: index.html
chapter_data_structure/summary/: index.html
codes/python/: 1011.py  425.py  maximumPairWiseSum.py  permuteArray.py  subsetSum.py
codes/python/backtracking/: Strobogrammatic.py  longestPalindromeSequence.py  longestpalindrome.py  unlockPatterns.py
docs/: index.md
