
[tool.poetry]
name = "algo-new-start"
version = "0.1.0"
description = ""
authors = ["poshakjaiswal <poshakkj@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mkdocs-material = {extras = ["imaging"], version = "^9.4.7"}
cairosvg = "^2.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
